# gpt_umrf_parser

./: CMakeLists.txt  README.md  augmentation.py  calc_statistics.py  environment.yaml  icl_builder.py  left  main.py  main_id_test.py  main_ood_test.py  package.xml  requirements.txt  right  setup.py  sys_configs.yaml  train_umrf.csv
2023_experiments/: requirements.txt  umrf.csv
archive_2023_experiments/: load_csv.py  valid_umrf.csv
configs/: experiment_1.yaml  experiment_2.yaml
datasets/: README.md  exp_1_id_alfred.csv  exp_2_ood_industrial_domain.csv  exp_3_ood.csv  id_alfred.csv  ood_complex_tasks.csv
experiment_3_code/: experiment3_icl_builder.py  experiment3_instruction_ablation.py  experiment3_num_few_show_ablation.py  experiment3_permutations.py  experiment_3.yaml
generated_outputs/: Llama-2-7b-hf_minimal_ood_complex_output_generations.csv
raw_input_samples/: umrf_examples.txt
scripts/: gpt_umrf_parser.py  gpt_umrf_parser_node.py  gpt_umrf_parser_standalone.py  gpt_umrf_parser_standalone_test.py  simple_query_sender.py
src/: gpt2_optimization.py  gpt2_test.py  helper.py  icl_builder.py  prompt.py  prompt_evaluation.py  prompt_score_maxing.py  umrf_dataset.py
umrf_data/: umrf_graph_0.umrfg.json  umrf_graph_10.umrfg.json  umrf_graph_14.umrfg.json  umrf_graph_20.umrfg.json  umrf_graph_30.umrfg.json  umrf_graph_34.umrfg.json  umrf_graph_47.umrfg.json  umrf_graph_48.umrfg.json  umrf_graph_51.umrfg.json  umrf_graph_57.umrfg.json  umrf_graph_61.umrfg.json  umrf_graph_62.umrfg.json  umrf_graph_9.umrfg.json
umrf_examples/: inspect_1.json  inspect_2.json  (+10 more)
(+69 files in other folders)
