<?xml version="1.0"?>
<package format="2">
  <name>gpt_umrf_parser</name>
  <version>0.0.0</version>
  <description>The gpt_umrf_parser package</description>
  <maintainer email="robert@todo.todo">robert</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>temoto_action_engine</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>temoto_action_engine</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>temoto_action_engine</exec_depend>


  <export>
  </export>
</package>
